--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mathertale-blocks",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Mathertale Blocks",
   "author": "butterandfly",
   "license": "MIT",
@@ -78,16 +78,20 @@
     "storybook": "^8.5.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-dts": "^4.5.0",
     "vitest": "^3.0.5"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.6",
+    "@radix-ui/react-tooltip": "^1.2.6",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -99,15 +103,12 @@
     "react-markdown": "^9.0.3",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
-    "remark-math": "^6.0.0",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@dnd-kit/utilities": "^3.2.2"
+    "remark-math": "^6.0.0"
   },
   "peerDependencies": {
+    "katex": "^0.16.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "katex": "^0.16.0"
+    "react-dom": "^19.0.0"
   },
   "bin": {
     "mathertale-build": "./dist/bin/cli.js"
